# stream-diffusion-webapp

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt  start.sh
backend/: app.py  img2img_video_stream_track.py  stream_diffusion_wrapper.py
frontend/: package.json
frontend/src/: WebRTCApp.tsx  index.css  main.tsx
